--- a/scss/_style_reset.scss
+++ b/scss/_style_reset.scss
@@ -30,6 +30,63 @@ time, mark, audio, video {
 body {
     line-height:1;
 
+    main {
+        #content {
+            width: 100%;
+
+            #desktop_schedule_table {
+                display: none;
+            }
+
+            #mobile_schedule_grid {
+                display: block;
+                width: 100%;
+
+                .schedule_block {
+                    background-color: $primaryColorLight;
+                    border-radius: 5%;
+                    margin: auto;
+                    margin-bottom: 1rem;
+                    padding: 1rem;
+                    width: 95%;
+
+                    &:last-child {
+                        margin-bottom: 0rem;
+                    }
+
+                    .block_content {
+                        h1 {
+                            margin:0;
+                            margin-bottom: 0.5rem;
+                            padding:0;
+                            border:0;
+                            outline:0;
+                            font-size:2rem;
+                            vertical-align:baseline;
+                            background:transparent;
+                        }
+
+                        h2 {
+                            margin:0;
+                            padding:0;
+                            border:0;
+                            outline:0;
+                            font-size:100%;
+                            vertical-align:baseline;
+                            background:transparent;
+                        }
+
+                        h3 {
+                            font-weight: normal;
+                            margin-left: 1rem;
+                            margin-bottom: 0.5rem;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
     nav {
         background-color: $primaryColor;
         height: 4rem;
