--- a/scss/_style_small.scss
+++ b/scss/_style_small.scss
@@ -18,7 +18,7 @@ body {
 
 	main {
 		height: 100vh;
-    	overflow: scroll;
+    	overflow-y: scroll;
         position: relative;
 		width: 100%;
 
