altered desktop table

--- a/scss/_style_medium.scss
+++ b/scss/_style_medium.scss
@@ -7,6 +7,8 @@ body {
 				width: 100%;
 
 				th {
+					background-color: $primaryColor;
+					color: $textIconColor;
 					padding: 0.5rem;
 				}
 
