--- a/css/styles.css
+++ b/css/styles.css
@@ -318,33 +318,35 @@ input, select {
   }
   /* line 9, C:/Users/taylor.herald/Documents/GitHub/AndroidAppDevelopment/scss/_style_medium.scss */
   body main div#content #desktop_schedule_table th {
+    background-color: #009688;
+    color: #FFFFFF;
     padding: 0.5rem;
   }
-  /* line 13, C:/Users/taylor.herald/Documents/GitHub/AndroidAppDevelopment/scss/_style_medium.scss */
+  /* line 15, C:/Users/taylor.herald/Documents/GitHub/AndroidAppDevelopment/scss/_style_medium.scss */
   body main div#content #desktop_schedule_table td {
     padding: 0.5rem;
   }
-  /* line 17, C:/Users/taylor.herald/Documents/GitHub/AndroidAppDevelopment/scss/_style_medium.scss */
+  /* line 19, C:/Users/taylor.herald/Documents/GitHub/AndroidAppDevelopment/scss/_style_medium.scss */
   body main div#content #desktop_schedule_table tr:nth-child(2n+1) {
     background-color: #B2DFDB;
   }
-  /* line 21, C:/Users/taylor.herald/Documents/GitHub/AndroidAppDevelopment/scss/_style_medium.scss */
+  /* line 23, C:/Users/taylor.herald/Documents/GitHub/AndroidAppDevelopment/scss/_style_medium.scss */
   body main div#content #desktop_schedule_table .week {
     width: 20%;
   }
-  /* line 25, C:/Users/taylor.herald/Documents/GitHub/AndroidAppDevelopment/scss/_style_medium.scss */
+  /* line 27, C:/Users/taylor.herald/Documents/GitHub/AndroidAppDevelopment/scss/_style_medium.scss */
   body main div#content #desktop_schedule_table .topic {
     width: 40%;
   }
-  /* line 29, C:/Users/taylor.herald/Documents/GitHub/AndroidAppDevelopment/scss/_style_medium.scss */
+  /* line 31, C:/Users/taylor.herald/Documents/GitHub/AndroidAppDevelopment/scss/_style_medium.scss */
   body main div#content #desktop_schedule_table .assigned {
     width: 20%;
   }
-  /* line 33, C:/Users/taylor.herald/Documents/GitHub/AndroidAppDevelopment/scss/_style_medium.scss */
+  /* line 35, C:/Users/taylor.herald/Documents/GitHub/AndroidAppDevelopment/scss/_style_medium.scss */
   body main div#content #desktop_schedule_table .deadlines {
     width: 20%;
   }
-  /* line 39, C:/Users/taylor.herald/Documents/GitHub/AndroidAppDevelopment/scss/_style_medium.scss */
+  /* line 41, C:/Users/taylor.herald/Documents/GitHub/AndroidAppDevelopment/scss/_style_medium.scss */
   body main div#content #mobile_schedule_grid {
     display: none;
   }
