--- a/scss/_style_small.scss
+++ b/scss/_style_small.scss
@@ -16,8 +16,15 @@ body {
 	font-family: $defaultFont;
 	font-size: 16px;
 
+	nav {
+		position: absolute;
+		width: 100%;
+		z-index: 3;
+	}
+
 	main {
 		height: 100vh;
+		padding-top: 4rem;
         position: relative;
 		width: 100%;
 
@@ -34,6 +41,40 @@ body {
 	    	h2 {
 	    		font-size: 1.75rem;
 	    		margin-top: 2rem;
+    		}
+
+    		ul {
+    			margin-left: 2rem;
+    			margin-top: 1rem;
+
+    			li {
+    				margin-bottom: 1rem;
+    			}
+    		}
+
+    		#code_gists {
+    			h1 {
+    				font-size: 2.5rem;
+    				margin-bottom: 0.5rem;
+    			}
+
+    			h2 {
+    				font-weight: normal;
+    				margin-top: 1rem;
+    			}
+    		}
+
+    		#useful_links {
+    			margin-top: 2rem;
+
+    			h1 {
+    				font-size: 2.5rem;
+    				margin-bottom: 0.5rem;
+    			}
+    		}
+
+    		#reminders {
+    			padding-bottom: 1rem;
     		}
     	}
 
