--- a/scss/_style_small.scss
+++ b/scss/_style_small.scss
@@ -43,6 +43,10 @@ body {
 	    		margin-top: 2rem;
     		}
 
+    		h2.studios {
+    			margin-top: 0rem;
+    		}
+
     		ul {
     			margin-left: 2rem;
     			margin-top: 1rem;
@@ -71,6 +75,10 @@ body {
     				font-size: 2.5rem;
     				margin-bottom: 0.5rem;
     			}
+    		}
+
+    		.prompt_text {
+    			margin-top: 1rem;
     		}
 
     		#reminders {
