--- a/scss/_style_small.scss
+++ b/scss/_style_small.scss
@@ -56,6 +56,13 @@ body {
     			}
     		}
 
+    		#code_from_class {
+    			h1 {
+    				font-size: 2.5rem;
+    				margin-bottom: 0.5rem;
+    			}
+    		}
+
     		#code_gists {
     			h1 {
     				font-size: 2.5rem;
