--- a/css/styles.css
+++ b/css/styles.css
@@ -308,7 +308,29 @@ input, select {
   body main #content #reminders {
     padding-bottom: 1rem;
   }
-  /* line 96, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_small.scss */
+  /* line 95, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_small.scss */
+  body main #content .screenshot_container {
+    margin-top: 1rem;
+    width: 100%;
+  }
+  /* line 99, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_small.scss */
+  body main #content .screenshot_container .screenshot_with_label {
+    margin: auto;
+    margin-bottom: 2rem;
+    width: 90%;
+  }
+  /* line 104, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_small.scss */
+  body main #content .screenshot_container .screenshot_with_label label {
+    display: block;
+    margin-top: 0.5rem;
+    text-align: center;
+    width: 100%;
+  }
+  /* line 111, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_small.scss */
+  body main #content .screenshot_container .screenshot_with_label .screenshot {
+    width: 100%;
+  }
+  /* line 119, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_small.scss */
   body main #menu {
     background-color: #FFFFFF;
     position: absolute;
@@ -319,27 +341,27 @@ input, select {
     -webkit-transition: all .5s, -webkit-transform .5s;
     transition: all .5s, transform .5s;
   }
-  /* line 107, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_small.scss */
+  /* line 130, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_small.scss */
   body main #menu ul {
     font-size: 1.75rem;
     list-style: none;
     text-decoration: none;
   }
-  /* line 112, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_small.scss */
+  /* line 135, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_small.scss */
   body main #menu ul li {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     padding-left: 1rem;
   }
-  /* line 117, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_small.scss */
+  /* line 140, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_small.scss */
   body main #menu ul li:last-child {
     padding-bottom: 1rem;
   }
-  /* line 121, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_small.scss */
+  /* line 144, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_small.scss */
   body main #menu ul li:first-child {
     padding-top: 1rem;
   }
-  /* line 128, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_small.scss */
+  /* line 151, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_small.scss */
   body main #shadow_div {
     background-color: #444444;
     height: 100vh;
@@ -353,7 +375,14 @@ input, select {
     -webkit-transition: all .5s, -webkit-transform .5s;
     transition: all .5s, transform .5s;
   }
-  /* line 145, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_small.scss */
+  /* line 167, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_small.scss */
+  body pre code {
+    background-color: #eee;
+    border: 1px solid #999;
+    display: block;
+    padding: 20px;
+  }
+  /* line 175, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_small.scss */
   .clearfix:after {
     content: "";
     display: table;
@@ -402,26 +431,74 @@ input, select {
   body main div#content #mobile_schedule_grid {
     display: none;
   }
+  /* line 45, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_medium.scss */
+  body main div#content .screenshot_container {
+    display: inline-block;
+  }
+  /* line 48, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_medium.scss */
+  body main div#content .screenshot_container .screenshot_with_label {
+    float: left;
+    margin: auto;
+    margin-bottom: 2rem;
+    width: 45%;
+  }
+  /* line 54, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_medium.scss */
+  body main div#content .screenshot_container .screenshot_with_label:nth-child(2n) {
+    float: right;
+  }
+  /* line 58, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_medium.scss */
+  body main div#content .screenshot_container .screenshot_with_label label {
+    display: block;
+    margin-top: 0.5rem;
+    text-align: center;
+    width: 100%;
+  }
+  /* line 65, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_medium.scss */
+  body main div#content .screenshot_container .screenshot_with_label .screenshot {
+    width: 100%;
+  }
 }
 
 @media screen and (min-width: 60rem) {
-  /* line 2, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_large.scss */
+  /* line 5, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_large.scss */
+  body main div#content .screenshot_container .screenshot_with_label {
+    display: inline-block;
+    float: unset;
+    margin: 0rem 2rem 2rem 2rem;
+    width: 15rem;
+  }
+  /* line 11, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_large.scss */
+  body main div#content .screenshot_container .screenshot_with_label:nth-child(2n) {
+    float: unset;
+  }
+  /* line 16, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_large.scss */
+  body main div#content .screenshot_container .screenshot_with_label label {
+    display: block;
+    margin-top: 0.5rem;
+    text-align: center;
+    width: 100%;
+  }
+  /* line 23, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_large.scss */
+  body main div#content .screenshot_container .screenshot_with_label .screenshot {
+    width: 100%;
+  }
+  /* line 32, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_large.scss */
   body nav#expanded_menu {
     display: block;
     padding-top: 1.125rem;
   }
-  /* line 6, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_large.scss */
+  /* line 36, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_large.scss */
   body nav#expanded_menu a {
     color: #FFFFFF;
     font-size: 1.75rem;
     margin-left: 3rem;
     text-decoration: none;
   }
-  /* line 12, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_large.scss */
+  /* line 42, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_large.scss */
   body nav#expanded_menu a:first-child {
     margin-left: 1rem;
   }
-  /* line 18, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_large.scss */
+  /* line 48, /Users/taylorherald/Documents/GitHub/AndroidAppDevelopment/scss/_style_large.scss */
   body nav#hamburger_menu {
     display: none;
   }
